検証用notebook追加

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -72,6 +72,8 @@ RUN pip install wandb
 
 RUN pip install gradio
 
+RUN pip install PyMuPDF
+
 RUN mkdir -p /tmp/own/docker/entrypoint
 COPY docker-entrypoint.sh /tmp/own/docker/entrypoint
 
